--- a/grid-gallery.html
+++ b/grid-gallery.html
@@ -59,7 +59,7 @@
                     src="../images/logo-default-231x49.png" alt="Cake-Asal-Banu-img"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav mr-sm-5 ">
-                    <li class="nav-item"><a class="nav-link active1" href="#">صفحه اصلی</a></li>
+                    <li class="nav-item"><a class="nav-link active1" href="/">صفحه اصلی</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">محصولات</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">گالری</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">درباره ما</a></li>
