--- a/grid-gallery.html
+++ b/grid-gallery.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>گالری</title>
     <!-- link to favicon -->
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- link to fontAwesome -->
-    <link rel="stylesheet" href="../fa/css/all.css">
+    <link rel="stylesheet" href="fa/css/all.css">
     <!-- link to iransans -->
-    <link rel="stylesheet" href="../font/iransans/iransans.css">
+    <link rel="stylesheet" href="font/iransans/iransans.css">
     <!--  stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.rtl.min.css"
         integrity="sha384-mUkCBeyHPdg0tqB6JDd+65Gpw5h/l8DKcCTV2D2UpaMMFd7Jo8A+mDAosaWgFBPl" crossorigin="anonymous">
-    <link rel="stylesheet" href="../OwlCarousel2-2.3.4/dist/assets/owl.carousel.css">
-    <link rel="stylesheet" href="../OwlCarousel2-2.3.4/dist/assets/owl.theme.default.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../zoomove-master/dist/zoomove.min.css">
+    <link rel="stylesheet" href="OwlCarousel2-2.3.4/dist/assets/owl.carousel.css">
+    <link rel="stylesheet" href="OwlCarousel2-2.3.4/dist/assets/owl.theme.default.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="zoomove-master/dist/zoomove.min.css">
 
 </head>
 
@@ -55,15 +55,15 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand " href="http://asalbanu.com"><img class="img-fluid"
-                    src="../images/logo-default-231x49.png" alt="Cake-Asal-Banu-img"></a>
+            <a class="navbar-brand " href="https://enigmatic-sierra-30939.herokuapp.com/"><img class="img-fluid"
+                    src="images/logo.png" alt="Cake-Asal-Banu-img"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav mr-sm-5 ">
-                    <li class="nav-item"><a class="nav-link active1" href="/">صفحه اصلی</a></li>
+                    <li class="nav-item"><a class="nav-link " href="index.html">صفحه اصلی</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">محصولات</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">گالری</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="grid-gallery.html">گالری</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">درباره ما</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">تماس با ما</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactUs.html">تماس با ما</a></li>
                 </ul>
             </div>
             <div class="d-flex ">
@@ -94,38 +94,38 @@
                         <div class="row row-10">
                             <div class="col-4 col-sm-2 col-lg-4">
                                 <!-- Thumbnail Minimal--><a class="thumbnail-minimal"
-                                    href="../images/grid-gallery-1-original.jpg" data-lightgallery="item"><img
-                                        src="../images/grid-gallery-1-130x130.jpg" class="img-fluid pb-4" alt="" width="130"
+                                    href="images/grid-gallery-1-original.jpg" data-lightgallery="item"><img
+                                        src="images/grid-gallery-1-130x130.jpg" class="img-fluid pb-4" alt="" width="130"
                                         height="130" /></a>
                             </div>
                             <div class="col-4 col-sm-2 col-lg-4">
                                 <!-- Thumbnail Minimal--><a class="thumbnail-minimal"
-                                    href="../images/grid-gallery-2-original.jpg" data-lightgallery="item"><img
-                                        src="../images/grid-gallery-2-130x130.jpg" class="img-fluid pb-4" alt="" width="130"
+                                    href="images/grid-gallery-2-original.jpg" data-lightgallery="item"><img
+                                        src="images/grid-gallery-2-130x130.jpg" class="img-fluid pb-4" alt="" width="130"
                                         height="130" /></a>
                             </div>
                             <div class="col-4 col-sm-2 col-lg-4">
                                 <!-- Thumbnail Minimal--><a class="thumbnail-minimal"
-                                    href="../images/grid-gallery-3-original.jpg" data-lightgallery="item"><img
-                                        src="../images/grid-gallery-3-130x130.jpg" class="img-fluid pb-4" alt="" width="130"
+                                    href="images/grid-gallery-3-original.jpg" data-lightgallery="item"><img
+                                        src="images/grid-gallery-3-130x130.jpg" class="img-fluid pb-4" alt="" width="130"
                                         height="130" /></a>
                             </div>
                             <div class="col-4 col-sm-2 col-lg-4">
                                 <!-- Thumbnail Minimal--><a class="thumbnail-minimal"
-                                    href="../images/grid-gallery-4-original.jpg" data-lightgallery="item"><img
-                                        src="../images/grid-gallery-4-130x130.jpg" class="img-fluid pb-4" alt="" width="130"
+                                    href="images/grid-gallery-4-original.jpg" data-lightgallery="item"><img
+                                        src="images/grid-gallery-4-130x130.jpg" class="img-fluid pb-4" alt="" width="130"
                                         height="130" /></a>
                             </div>
                             <div class="col-4 col-sm-2 col-lg-4">
                                 <!-- Thumbnail Minimal--><a class="thumbnail-minimal"
-                                    href="../images/grid-gallery-5-original.jpg" data-lightgallery="item"><img
-                                        src="../images/grid-gallery-5-130x130.jpg" class="img-fluid pb-4" alt="" width="130"
+                                    href="images/grid-gallery-5-original.jpg" data-lightgallery="item"><img
+                                        src="images/grid-gallery-5-130x130.jpg" class="img-fluid pb-4" alt="" width="130"
                                         height="130" /></a>
                             </div>
                             <div class="col-4 col-sm-2 col-lg-4">
                                 <!-- Thumbnail Minimal--><a class="thumbnail-minimal"
-                                    href="../images/grid-gallery-6-original.jpg" data-lightgallery="item"><img
-                                        src="../images/grid-gallery-6-130x130.jpg" class="img-fluid pb-4" alt="" width="130"
+                                    href="images/grid-gallery-6-original.jpg" data-lightgallery="item"><img
+                                        src="images/grid-gallery-6-130x130.jpg" class="img-fluid pb-4" alt="" width="130"
                                         height="130" /></a>
                             </div>
                         </div>
@@ -199,19 +199,23 @@
         <!--end footer section -->
     
         <!-- script-->
-        <script src="../js/jquery-3.3.1.min.js"></script>
+        <script src="js/jquery-3.3.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
             integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
             crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
             integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
             crossorigin="anonymous"></script>
-        <script src="../OwlCarousel2-2.3.4/src/js/owl.carousel.js"></script>
-        <script src="../zoomove-master/dist/zoomove.min.js"></script>
+        <script src="OwlCarousel2-2.3.4/src/js/owl.carousel.js"></script>
+        <script src="zoomove-master/dist/zoomove.min.js"></script>
         <!-- <script src="../js/script.js"></script> -->
         <script>
             $(document).ready(function () {
                 $('.preloader').addClass('loaded');
+                $('.nav-link').click(function(){
+                $(this).addClass('active');
+                $(this).parent().siblings().children().removeClass('active');
+            })
             })
         </script>
     
