--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand " href="http://asalbanu.com"><img class="img-fluid"
-                    src="images/logo-default-231x49.png" alt="Cake-Asal-Banu-img"></a>
+            <a class="navbar-brand " href="https://enigmatic-sierra-30939.herokuapp.com/"><img class="img-fluid"
+                    src="images/logo.png" alt="Cake-Asal-Banoo-img"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav mr-sm-5 ">
-                    <li class="nav-item"><a class="nav-link active1" href="#">صفحه اصلی</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#">صفحه اصلی</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">محصولات</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/grid-gallery">گالری</a></li>
+                    <li class="nav-item"><a class="nav-link" href="grid-gallery.html">گالری</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">درباره ما</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">تماس با ما</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactUs.html">تماس با ما</a></li>
                 </ul>
             </div>
             <div class="d-flex ">
@@ -72,9 +72,8 @@
             </div>
         </div>
     </nav>
-    <header class="jumbotrn"></header>
     <!-- title section -->
-    <section id="title" class="mt-3">
+    <section id="title">
 
         <div class="card">
             <div class="bg-img-1">
@@ -800,9 +799,16 @@
     <script>
         $(document).ready(function () {
             $('.preloader').addClass('loaded');
+            $('.nav-link').click(function(){
+                $(this).addClass('active');
+                $(this).parent().siblings().children().removeClass('active');
+            })
+
+
+
             $('.offer-section-card').mouseenter(function () {
 
-                $('.card-link').css({
+               $('.card-link').css({
                     color: '#c14679',
                     border: '2px solid #c14679'
                 });
