--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
                     <form>
                         <div class="form-group">
                             <div class="input-group ">
-                                <input type="text" class=" form-control border-0 " id="search-text" placeholder="جست و جو کنید...">
-                                <i role="button" class=" fa fa-search fa-2x input-group-append input-group-search-icon"></i>
+                                <input type="text" class=" form-control border-0 " id="search-text"
+                                    placeholder="جست و جو کنید...">
+                                <i role="button"
+                                    class=" fa fa-search fa-2x input-group-append input-group-search-icon"></i>
                             </div>
                         </div>
                     </form>
@@ -668,25 +670,25 @@
         <div class="container py-5 ">
             <div class="row my-auto align-items-center justify-content-center  ">
                 <!--singel client-->
-                <div class="col-lg-2 col-6">
+                <div class="col-lg-2 col-6 p-4">
                     <a class="clients-classic" href="#"><img src="images/clients-1-120x112.png" alt="client-img"
                             width="120" height="112" /></a>
                 </div>
                 <!--end singel client-->
                 <!--singel client-->
-                <div class="col-lg-2 col-6">
+                <div class="col-lg-2 col-6 p-4">
                     <a class="clients-classic" href="#"><img src="images/clients-2-105x118.png" alt="client-img"
                             width="105" height="118" /></a>
                 </div>
                 <!--end singel client-->
                 <!--singel client-->
-                <div class="col-lg-2 col-6">
+                <div class="col-lg-2 col-6 p-4">
                     <a class="clients-classic" href="#"><img src="images/clients-3-111x98.png" alt="client-img"
                             width="111" height="98" /></a>
                 </div>
                 <!--end singel client-->
                 <!--singel client-->
-                <div class="col-lg-2 col-6">
+                <div class="col-lg-2 col-6 p-4">
                     <a class="clients-classic" href="#"><img src="images/clients-4-122x92.png" alt="client-img"
                             width="122" height="92" /></a>
                 </div>
