--- a/contactUs.html
+++ b/contactUs.html
@@ -298,7 +298,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div id="btn-top">
             <a href="#page-title" class="go-up" title="رفتن به بالا"><i class=" fa fa-arrow-up"></i></a>
         </div>
     </section>
