--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div id="btn-top">
             <a href="#title" class="go-up" title="رفتن به بالا"><i class=" fa fa-arrow-up"></i></a>
         </div>
     </section>
